<resources>
    <string name="app_name">SportApp</string>
    <string name="registration">Registration</string>
    <string name="enter_username">Enter User Name</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_in">Sign in</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Home</string>
    <string name="title_notifications">Home</string>
    <string name="cancel">CANCEL</string>
    <string name="enter_firstname">Enter First Name</string>
    <string name="enter_secondname">Enter Second Name</string>
    <string name="sportsman">Sportsman</string>
    <string name="coach">Coach</string>
    <string name="type">Choose your type</string>
    <string name="next">Continue</string>
    <string name="create_training">Create training</string>
    <string name="title_profile">profile</string>
    <string name="add_plan">Add plan</string>
    <string name="my_plans">My plans</string>
    <string name="add_exercise">Add new exercise</string>
    <string name="save_training">Save training</string>
    <string name="date_hint">Enter the training date</string>
    <string name="select_existing_exercise">Select existing exercise</string>
    <string name="select_date">Select training date</string>
    <string name="date_of_birth">Select the date of birth</string>
    <string name="plan_date">Plan Date</string>
    <string name="menu">Menu</string>
    <string name="edit">Edit plan</string>
    <string name="delete">Delete plan</string>
    <string name="completed">Completed</string>
    <string name="select_plan_date">Select plan date</string>
    <string name="save_plan">Save plan</string>
    <string name="save_changes">Save changes</string>
    <string name="delete_plan">Delete plan</string>
    <string name="add_new_exercise">Add new exercise</string>
    <string name="description">Write description</string>
    <string name="number_of_repeats">Number of repetitions</string>
    <string name="save">Save</string>
    <string name="video_url">Video URL (optionally)</string>
    <string name="number_of_sets">Number of sets</string>
    <string name="duration">Duration (in seconds)</string>
    <string name="string_trainings">Trainings</string>
    <string name="chronicle">Chronicle</string>
    <string name="trainings">Trainings</string>
    <string name="main">Main</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_coachListOfSportsmen">Coach list of sportsmen</string>
    <string name="menu_myAccount">My account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="authorization">Login</string>
    <string name="register">Register</string>
    <string name="current_plan">Current plan</string>
    <string name="completed_plans">Completed plans</string>
    <string name="plan_title">Plan Title</string>
    <string name="todo">TODO</string>
    <string name="menu_add_training">Add training</string>
    <string name="menu_notifications">Notifications</string>
    <string name="menu_plans">Plans</string>
    <string name="menu_add_coach">Add coach</string>
    <string name="enter_user_s_login">Enter user\'s  login or name</string>
    <string name="search">Search</string>
    <string name="menu_one_training">One training</string>
    <string name="current_training">Current training</string>
    <string name="exercise_title">Exercise title</string>
    <string name="exercise_description">Exercise description</string>
    <string name="exercise_repetitions">Exercise repetitions</string>
    <string name="exercise">Information about the exercise</string>
    <string name="choose_an_existing_exercise">Choose an existing exercise</string>
    <string name="my_training_events">My training events</string>
    <string name="menu_training_events">My training Events</string>
    <string name="training_title">Training</string>
    <string name="total_number_of_exercises">Total number of exercises</string>
    <string name="total_duration">Total duration</string>
    <string name="enter_training_name">Enter training name</string>
    <string name="name">Write exercise\'s name</string>
    <string name="menu_my_trainings">My trainings</string>
    <string name="my_trainings">My trainings</string>
    <string name="create_event">Create training event</string>
    <string name="choose_event">Choose an existing training</string>
    <string name="_1_select_date">1. Select date</string>
    <string name="_2_choose_a_way_to_create_a_training">2. Choose a way to create a training</string>
    <string name="or">or</string>
    <string name="enter_training_s_name">Enter training\'s name</string>
    <string name="add_training" />
    <string name="user_name">User\'s Name</string>
    <string name="user_age">User\'s age</string>
    <string name="add_to_friend">+</string>
    <string name="enter_plan_name">Enter plan name</string>
    <string name="create_training_event">2. Create training event</string>
    <string name="add">Add</string>
    <string name="plan_name">1. Plan name</string>
    <string name="total_number_of_training_events">Total number of training events</string>
    <string name="first_training_event">First training event</string>
    <string name="last_training_event">Last training event</string>
    <string name="training_date">Training Date</string>
    <string name="event_title">Training Event</string>
    <string name="subscribers">Subscribers</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="PlanTrain">Plan Train</string>
    <string name="my_friends">My friends</string>
    <string name="menu_find_friends">Find friends</string>
    <string name="creation_time">Creation time</string>
    <string name="menu_rating">Rating</string>
    <string name="rating">Rating</string>
    <string name="user_position">position</string>
    <string name="notifications">Notifications</string>
    <string name="message">Message</string>
    <string name="user">User</string>


</resources>