<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_plans"
            android:icon="@drawable/main"
            android:title="@string/menu_plans" />

        <item
            android:id="@+id/nav_trainings"
            android:icon="@drawable/trainings"
            android:title="@string/menu_my_trainings" />

        <item
            android:id="@+id/nav_training_events"
            android:icon="@drawable/trainings"
            android:title="@string/menu_training_events" />

        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/profile"
            android:title="@string/my_friends" />

        <item
            android:id="@+id/nav_add_coach"
            android:icon="@drawable/ic_add"
            android:title="@string/menu_add_coach" />

        <item
            android:id="@+id/nav_find_friends"
            android:icon="@drawable/search"
            android:title="@string/menu_find_friends" />

        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/cup"
            android:title="@string/menu_rating" />
    </group>
</menu>