<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_sportsman"
    app:startDestination="@+id/nav_plans">

    <fragment
        android:id="@+id/nav_plans"
        android:label="@string/menu_plans"
        android:name="org.sportApp.userInterface.sportsman.ui.plans.CurrentPlan"
        tools:layout="@layout/fragment_current_plan" />

    <fragment
        android:id="@+id/nav_trainings"
        android:label="@string/menu_my_trainings"
        android:name="org.sportApp.userInterface.sportsman.ui.trainings.MyTrainings"
        tools:layout="@layout/fragment_common" />

    <fragment
        android:id="@+id/nav_completed_plans"
        android:label="@string/menu_completed_plans"
        android:name="org.sportApp.userInterface.sportsman.ui.plans.CompletedPlans"
        tools:layout="@layout/fragment_completed_plans" />


    <fragment
        android:id="@+id/nav_add_coach"
        android:label="@string/menu_add_coach"
        android:name="org.sportApp.userInterface.sportsman.ui.interaction.FindCoach"
        tools:layout="@layout/fragment_find_user" />

    <fragment
        android:id="@+id/nav_friends"
        android:label="@string/my_friends"
        android:name="org.sportApp.userInterface.sportsman.ui.interaction.Friends"
        tools:layout="@layout/fragment_friends" />

    <fragment
        android:id="@+id/nav_find_friends"
        android:label="@string/menu_find_friends"
        android:name="org.sportApp.userInterface.sportsman.ui.interaction.FindFriends"
        tools:layout="@layout/fragment_find_user" />

    <fragment
        android:id="@+id/nav_rating"
        android:label="@string/menu_rating"
        android:name="org.sportApp.userInterface.sportsman.ui.interaction.Rating"
        tools:layout="@layout/fragment_common" />

    <fragment
        android:id="@+id/nav_notifications"
        android:label="@string/menu_notifications"
        android:name="org.sportApp.userInterface.sportsman.ui.interaction.Notifications"
        tools:layout="@layout/fragment_common" />

</navigation>