<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/one_item_background"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/planNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plan_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/violet"
        android:gravity="center"
        android:padding="8dp" />

    <TextView
        android:id="@+id/numberOfEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_number_of_training_events"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:padding="8dp" />

    <TextView
        android:id="@+id/firstDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_training_event"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:padding="8dp" />

    <TextView
        android:id="@+id/lastDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_training_event"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:padding="8dp" />

    <TextView
        android:id="@+id/creationTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creation_time"
        android:textSize="16sp"
        android:textStyle="italic"
        android:textColor="@android:color/black"
        android:padding="8dp" />

</LinearLayout>
