<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/one_item_background"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/trainingNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/violet"
        android:gravity="center"
        android:padding="8dp" />

    <TextView
        android:id="@+id/numberOfExercises"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_number_of_exercises"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:padding="8dp" />

    <TextView
        android:id="@+id/totalDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_duration"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:padding="8dp" />

    <TextView
        android:id="@+id/trainingDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/training_date"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:padding="8dp" />

</LinearLayout>

