<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewEnterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/plan_name"
        android:textColor="@color/violet"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewEnterName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:hint="@string/enter_plan_name"
        android:inputType="text" /> />

    <TextView
        android:id="@+id/textViewAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextName"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:textColor="@color/violet"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/create_training_event" />

    <ImageButton
            android:id="@+id/buttonAddTraining"
            android:layout_width="72dp"
            android:layout_height="43dp"
            android:layout_below="@id/textViewAdd"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="162dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="161dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:backgroundTint="@color/violet"
            android:contentDescription="@string/todo"
            android:padding="16dp"
            android:src="@drawable/ic_add" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trainingEventRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp" android:layout_below="@+id/buttonSaveChanges"/>
    <Button
            android:id="@+id/buttonSaveChanges"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="116dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="113dp"
            android:backgroundTint="@color/violet"
            android:text="@string/save_changes"
            android:textColor="@color/white" android:layout_below="@+id/buttonAddTraining"/>

</RelativeLayout>
