<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".userInterface.registration.RegistrationWindow">
    <TextView
        android:id="@+id/idHeader"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/violet"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/idHeader"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:autofillHints=""
        android:background="@drawable/frame"
        android:hint="@string/enter_firstname"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/firstName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_secondname"
        android:inputType="text"
        android:autofillHints=""
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/frame"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/lastName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:autofillHints=""
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/frame"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@id/userName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:autofillHints=""
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center_vertical"
        android:background="@drawable/frame"/>

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"
            android:textColor="@color/violet" />

        <Button
            android:id="@+id/registrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/violet"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

</RelativeLayout>
