<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/title_profile"
        android:padding="15dp"
        android:src="@drawable/profile" />

    <ImageButton
        android:id="@+id/notificationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/title_notifications"
        android:padding="15dp"
        android:src="@drawable/notifications" />

    <View
        android:id="@+id/topDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/notificationButton"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray" />

    <View
        android:id="@+id/bottomDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/topDivider"
        android:layout_marginTop="118dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/addTrainingButton"
        android:layout_width="163dp"
        android:layout_height="81dp"
        android:layout_below="@id/topDivider"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_background"
        android:minWidth="150dp"
        android:padding="20dp"
        android:text="@string/add_training" />

    <Button
        android:id="@+id/addPlanButton"
        android:layout_width="163dp"
        android:layout_height="81dp"
        android:layout_below="@id/topDivider"
        android:layout_marginStart="43dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="28dp"
        android:layout_toEndOf="@id/addTrainingButton"
        android:background="@drawable/button_background"
        android:minWidth="150dp"
        android:padding="20dp"
        android:text="@string/add_plan" />

    <TextView
        android:id="@+id/myPlansLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addTrainingButton"
        android:layout_centerHorizontal="true"
        android:text="@string/my_plans"
        android:textSize="24sp"
        android:layout_marginTop="32dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/myPlansLabel"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

</RelativeLayout>
