<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/currentTrainingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/create_training"
        android:textSize="24sp"
        android:layout_marginTop="15dp" />

    <EditText
        android:id="@+id/trainingNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentTrainingLabel"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_training_name"
        android:padding="12dp"
        android:autofillHints=""
        android:inputType=""
        android:singleLine="true"
        tools:ignore="TextFields" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addTrainingsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/trainingNameEditText"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:textAlignment="center"
        android:layout_marginBottom="16dp" />

    <ImageButton
        android:id="@+id/addTrainingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/todo"
        android:padding="16dp"
        android:src="@drawable/ic_add" />

    <Button
        android:id="@+id/saveTrainingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="122dp"
        android:layout_marginBottom="19dp"
        android:backgroundTint="@color/violet"
        android:gravity="center_vertical|center_horizontal"
        android:padding="16dp"
        android:text="@string/save_changes"
        android:textColor="@color/white" />

</RelativeLayout>
